--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         <!-- Dependency version -->
         <antlr.version>4.5.3</antlr.version>
         <commons-lang.version>3.5</commons-lang.version>
-        <commons-codec.version>1.10</commons-codec.version>
+        <commons-codec.version>1.13-RC1</commons-codec.version>
         <commons-io.version>2.4</commons-io.version>
         <slf4j.version>1.7.25</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
