--- a/legend-pure-test-reports/pom.xml
+++ b/legend-pure-test-reports/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>trunk-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>legend-pure-test-reports</artifactId>
