--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,9 +59,9 @@ jobs:
         run: mvn de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
       - name: Build + Test
         if: github.ref != 'refs/heads/master'
-        # TODO - remove skipTests and add javadoc:javadoc goal
+        # TODO - add javadoc:javadoc goal
         run: mvn install
       - name: Build + Test + Sonar + Maven Deploy
         if: github.ref == 'refs/heads/master'
-        # TODO - remove skipTests, add javadoc:javadoc goal and -Psonar profile
-        run: mvn deploy -Psonar
+        # TODO - add javadoc:javadoc goal and -Psonar profile
+        run: mvn deploy
