Fix build warnings

--- a/legend-pure-runtime-java-engine-compiled/pom.xml
+++ b/legend-pure-runtime-java-engine-compiled/pom.xml
@@ -59,10 +59,19 @@
                     <mainClass>org.finos.legend.pure.runtime.java.compiled.generation.JavaClassLoaderSourceCodeGenerator</mainClass>
                     <arguments>
                         <argument>${project.build.directory}/generated-sources/</argument>
-                        <argyment></argyment>
+                        <argument></argument>
                         <argument>Core</argument>
                     </arguments>
+                    <includeProjectDependencies>true</includeProjectDependencies>
+                    <includePluginDependencies>true</includePluginDependencies>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.finos.legend.pure</groupId>
+                        <artifactId>legend-pure-code-compiled-platform</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -129,6 +138,15 @@
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m3-platform</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m2-dsl-diagram</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m2-dsl-mapping</artifactId>
         </dependency>
 
         <dependency>
