--- a/legend-pure-code-java-compiled-core/pom.xml
+++ b/legend-pure-code-java-compiled-core/pom.xml
@@ -127,10 +127,12 @@
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m2-dsl-mapping</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-runtime-java-extension-dsl-mapping</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
 
