--- a/legend-pure-runtime-java-extension-dsl-mapping/pom.xml
+++ b/legend-pure-runtime-java-extension-dsl-mapping/pom.xml
@@ -49,10 +49,19 @@
                     <mainClass>org.finos.legend.pure.runtime.java.compiled.generation.JavaClassLoaderSourceCodeGenerator</mainClass>
                     <arguments>
                         <argument>${project.build.directory}/generated-sources/</argument>
-                        <argyment></argyment>
+                        <argument></argument>
                         <argument>Mapping</argument>
                     </arguments>
+                    <includeProjectDependencies>true</includeProjectDependencies>
+                    <includePluginDependencies>true</includePluginDependencies>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.finos.legend.pure</groupId>
+                        <artifactId>legend-pure-code-compiled-platform</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -79,17 +88,6 @@
                     <useManifestOnlyJar>false</useManifestOnlyJar>
                     <workingDirectory>${project.parent.basedir}</workingDirectory>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
@@ -121,12 +119,17 @@
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-runtime-java-engine-compiled</artifactId>
+            <artifactId>legend-pure-m2-dsl-diagram</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m2-dsl-mapping</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-runtime-java-engine-compiled</artifactId>
         </dependency>
 
         <dependency>
