Fix Sonar Issues

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>8</maven.compiler.release>
 
         <!-- Dependency version -->
         <antlr.version>4.5.3</antlr.version>
@@ -98,6 +99,7 @@
                     <configuration>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
+                        <release>${maven.compiler.release}</release>
                     </configuration>
                 </plugin>
                 <plugin>
