[maven-release-plugin] prepare for next development iteration

--- a/legend-pure-m3-platform/pom.xml
+++ b/legend-pure-m3-platform/pom.xml
@@ -22,14 +22,14 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>0.0.5</version>
+        <version>0.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <name>Legend Pure - Base - M3 Platform</name>
     <artifactId>legend-pure-m3-platform</artifactId>
     <packaging>jar</packaging>
-    <version>0.0.5</version>
+    <version>0.1.0-SNAPSHOT</version>
 
     <properties>
         <javadoc.skip>true</javadoc.skip>
