--- a/legend-pure-m3-dsl-graph/pom.xml
+++ b/legend-pure-m3-dsl-graph/pom.xml
@@ -19,14 +19,14 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.0.6</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <name>Legend Pure - Base - M3 DSL Graph</name>
     <artifactId>legend-pure-m3-dsl-graph</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.0.6</version>
 
     <build>
         <plugins>
