--- a/legend-pure-maven-java-compiled/pom.xml
+++ b/legend-pure-maven-java-compiled/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.0.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>legend-pure-maven-java-compiled</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.0.6</version>
     <name>Legend Pure - Maven - Plugin Compiled JAR</name>
 
     <build>
