--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
         <jaxrs.version>2.0.1</jaxrs.version>
         <swagger.annotation.version>1.5.20</swagger.annotation.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
+        <snakeyaml.version>1.26</snakeyaml.version>
     </properties>
 
     <scm>
@@ -654,6 +655,11 @@
             </dependency>
             <dependency>
                 <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-configuration</artifactId>
+                <version>${dropwizard.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-forms</artifactId>
                 <version>${dropwizard.version}</version>
             </dependency>
@@ -712,6 +718,12 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
+            </dependency>
+
             <!-- DROPWIZARD -->
 
             <dependency>
