--- a/legend-pure-ide-light/src/main/web/package.json
+++ b/legend-pure-ide-light/src/main/web/package.json
@@ -17,10 +17,10 @@
   },
   "dependencies": {
     "@material-ui/core": "4.11.0",
-    "@types/lodash": "4.14.162",
-    "@types/node": "14.14.2",
-    "@types/react": "16.9.53",
-    "@types/react-dom": "16.9.8",
+    "@types/lodash": "4.14.163",
+    "@types/node": "14.14.6",
+    "@types/react": "16.9.55",
+    "@types/react-dom": "16.9.9",
     "@types/react-resize-detector": "5.0.0",
     "@types/react-select": "3.0.22",
     "@types/react-window": "1.8.2",
@@ -33,14 +33,14 @@
     "mobx-react-lite": "3.0.1",
     "monaco-editor": "0.21.2",
     "query-string": "6.13.6",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-hotkeys": "2.0.0",
     "react-icons": "3.11.0",
+    "react-reflex": "3.1.0",
     "react-resize-detector": "5.2.0",
     "react-select": "3.1.0",
-    "react-split-pane": "0.1.92",
-    "react-window": "1.8.5",
+    "react-window": "1.8.6",
     "serializr": "2.0.3",
     "uuid": "8.3.1",
     "whatwg-fetch": "3.4.1"
@@ -52,8 +52,8 @@
     "@babel/preset-react": "7.12.1",
     "@babel/preset-typescript": "7.12.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
-    "@typescript-eslint/eslint-plugin": "4.5.0",
-    "@typescript-eslint/parser": "4.5.0",
+    "@typescript-eslint/eslint-plugin": "4.6.0",
+    "@typescript-eslint/parser": "4.6.0",
     "autoprefixer": "10.0.1",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
@@ -62,26 +62,26 @@
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
     "cssnano": "4.1.10",
-    "eslint": "7.11.0",
+    "eslint": "7.12.1",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
-    "fork-ts-checker-webpack-plugin": "5.2.0",
+    "fork-ts-checker-webpack-plugin": "5.2.1",
     "html-webpack-plugin": "5.0.0-alpha.7",
-    "mini-css-extract-plugin": "1.1.1",
+    "mini-css-extract-plugin": "1.2.1",
     "monaco-editor-webpack-plugin": "2.0.0",
-    "postcss": "8.1.2",
+    "postcss": "8.1.4",
     "postcss-loader": "4.0.4",
     "postcss-scss": "3.0.2",
     "react-refresh": "0.9.0",
     "resolve": "1.18.1",
-    "sass": "1.27.0",
-    "sass-loader": "10.0.3",
+    "sass": "1.28.0",
+    "sass-loader": "10.0.4",
     "semver": "7.3.2",
     "strip-ansi": "6.0.0",
     "text-table": "0.2.0",
-    "typescript": "4.0.3",
-    "webpack": "5.1.3",
+    "typescript": "4.0.5",
+    "webpack": "5.3.2",
     "webpack-cli": "4.1.0",
     "webpack-dev-server": "3.11.0",
     "wrap-ansi": "7.0.0"
