IDE: upgrade dependencies and fix problem with font loading order

--- a/legend-pure-ide-light/src/main/web/tsconfig.json
+++ b/legend-pure-ide-light/src/main/web/tsconfig.json
@@ -33,6 +33,5 @@
       "Style/*": ["style/*"]
     }
   },
-  "include": ["style/**/*.ts", "src/**/*.ts", "src/**/*.tsx"],
-  "files": ["src/index.tsx"]
+  "include": ["style/**/*.ts", "src/**/*.ts", "src/**/*.tsx"]
 }
