--- a/legend-pure-ide-light/src/main/web/package.json
+++ b/legend-pure-ide-light/src/main/web/package.json
@@ -9,81 +9,81 @@
     "build": "webpack --mode production",
     "start": "node ./dev/scripts/start.js",
     "start:advanced": "node ./dev/scripts/start.js --advanced",
-    "start:minimal": "webpack serve --mode development --hot",
+    "start:minimal": "webpack serve --mode development",
     "serve:static": "npx http-server ../../../target/classes/ -p 3000 -a localhost -g --cors -o /ide",
     "lint": "eslint --config ./.eslintrc-advanced.js .",
     "lint:fix": "eslint --config ./.eslintrc-advanced.js --fix .",
     "update": "yarn upgrade-interactive --latest"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.0",
-    "@types/lodash": "4.14.163",
-    "@types/node": "14.14.6",
-    "@types/react": "16.9.55",
-    "@types/react-dom": "16.9.9",
+    "@material-ui/core": "4.11.1",
+    "@types/lodash": "4.14.165",
+    "@types/node": "14.14.10",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
     "@types/react-resize-detector": "5.0.0",
-    "@types/react-select": "3.0.22",
+    "@types/react-select": "3.0.26",
     "@types/react-window": "1.8.2",
     "@types/uuid": "8.3.0",
     "clsx": "1.1.1",
     "history": "5.0.0",
     "http-status-codes": "2.1.4",
     "lodash": "4.17.20",
-    "mobx": "6.0.1",
-    "mobx-react-lite": "3.0.1",
+    "mobx": "6.0.4",
+    "mobx-react-lite": "3.1.6",
     "monaco-editor": "0.21.2",
-    "query-string": "6.13.6",
+    "query-string": "6.13.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hotkeys": "2.0.0",
-    "react-icons": "3.11.0",
+    "react-icons": "4.1.0",
     "react-reflex": "3.1.0",
     "react-resize-detector": "5.2.0",
-    "react-select": "3.1.0",
+    "react-select": "3.1.1",
     "react-window": "1.8.6",
     "serializr": "2.0.3",
     "uuid": "8.3.1",
-    "whatwg-fetch": "3.4.1"
+    "whatwg-fetch": "3.5.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.3",
+    "@babel/core": "7.12.9",
     "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/preset-env": "7.12.1",
-    "@babel/preset-react": "7.12.1",
-    "@babel/preset-typescript": "7.12.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
-    "@typescript-eslint/eslint-plugin": "4.6.0",
-    "@typescript-eslint/parser": "4.6.0",
-    "autoprefixer": "10.0.1",
+    "@babel/preset-env": "7.12.7",
+    "@babel/preset-react": "7.12.7",
+    "@babel/preset-typescript": "7.12.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@typescript-eslint/eslint-plugin": "4.9.0",
+    "@typescript-eslint/parser": "4.9.0",
+    "autoprefixer": "10.0.4",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.1.0",
+    "babel-loader": "8.2.2",
     "chalk": "4.1.0",
-    "circular-dependency-plugin": "5.2.0",
+    "circular-dependency-plugin": "5.2.2",
     "clean-webpack-plugin": "3.0.0",
-    "css-loader": "5.0.0",
+    "css-loader": "5.0.1",
     "cssnano": "4.1.10",
-    "eslint": "7.12.1",
+    "eslint": "7.14.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
-    "fork-ts-checker-webpack-plugin": "5.2.1",
-    "html-webpack-plugin": "5.0.0-alpha.7",
-    "mini-css-extract-plugin": "1.2.1",
+    "fork-ts-checker-webpack-plugin": "6.0.4",
+    "html-webpack-plugin": "5.0.0-alpha.14",
+    "mini-css-extract-plugin": "1.3.1",
     "monaco-editor-webpack-plugin": "2.0.0",
-    "postcss": "8.1.4",
-    "postcss-loader": "4.0.4",
-    "postcss-scss": "3.0.2",
+    "postcss": "8.1.10",
+    "postcss-loader": "4.1.0",
+    "postcss-scss": "3.0.4",
     "react-refresh": "0.9.0",
-    "resolve": "1.18.1",
-    "sass": "1.28.0",
-    "sass-loader": "10.0.4",
+    "resolve": "1.19.0",
+    "sass": "1.29.0",
+    "sass-loader": "10.1.0",
     "semver": "7.3.2",
     "strip-ansi": "6.0.0",
     "text-table": "0.2.0",
-    "typescript": "4.0.5",
-    "webpack": "5.3.2",
-    "webpack-cli": "4.1.0",
-    "webpack-dev-server": "3.11.0",
+    "typescript": "4.1.2",
+    "webpack": "5.9.0",
+    "webpack-cli": "4.2.0",
+    "webpack-dev-server": "4.0.0-beta.0",
     "wrap-ansi": "7.0.0"
   },
   "browserslist": [
