Restrict Java version to 11, as some tests fail in some higher versions

--- a/pom.xml
+++ b/pom.xml
@@ -253,7 +253,7 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>11</version>
+                                    <version>[11,12)</version>
                                 </requireJavaVersion>
                                 <dependencyConvergence />
                                 <bannedDependencies>
