[maven-release-plugin] prepare for next development iteration

--- a/legend-pure-m2-external-json/pom.xml
+++ b/legend-pure-m2-external-json/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>1.4.0</version>
+        <version>1.4.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>legend-pure-m2-external-json</artifactId>
     <packaging>jar</packaging>
-    <version>1.4.0</version>
+    <version>1.4.1-SNAPSHOT</version>
     <name>Legend Pure - Base - M2 Ext JSON</name>
 
     <build>
