[maven-release-plugin] prepare release legend-pure-1.5.0

--- a/legend-pure-m2-dsl-mapping/pom.xml
+++ b/legend-pure-m2-dsl-mapping/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>1.4.1-SNAPSHOT</version>
+        <version>1.5.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>legend-pure-m2-dsl-mapping</artifactId>
     <packaging>jar</packaging>
-    <version>1.4.1-SNAPSHOT</version>
+    <version>1.5.0</version>
     <name>Legend Pure - Base - M2 DSL Mapping</name>
 
     <build>
