--- a/legend-pure-m3-dsl-path/pom.xml
+++ b/legend-pure-m3-dsl-path/pom.xml
@@ -19,14 +19,14 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>1.5.2</version>
+        <version>1.5.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <name>Legend Pure - Base - M3 DSL Path</name>
     <artifactId>legend-pure-m3-dsl-path</artifactId>
     <packaging>jar</packaging>
-    <version>1.5.2</version>
+    <version>1.5.3-SNAPSHOT</version>
 
     <build>
         <plugins>
